[workspace]
members = [
    "kitti_dataset_reader",
]

[[bin]]
name = "run_system"
path = "run.rs"

[package]
name = "dora-simple-vo"
version = "0.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1.34.0", features = ["full"]}
tracing = { version = "0.1.40" }
tracing-subscriber = "0.3.18"
eyre = "*"
dora-daemon = { version = "*" }
