[package]
name = "kitti_dataset_reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "*" }
csv = "*"
clap = { version = "4.0.3", features = ["derive"] }
nalgebra = { version = "0.32.3" }
image = "*"
