[package]
name = "pushmessage_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cxx = "1.0.110"
dora-node-api = "*"
eyre = "0.6.9"

[build-dependencies]
cxx-build = "1.0"

[lib]
crate-type = ["staticlib"]
